--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - go get -t ./...
 
 script:
-  - GOMAXPROCS=4 GORACE="halt_on_error=1" go test -race -v -coverprofile=coverage.txt -covermode=atomic ./...
+  - GOMAXPROCS=4 GORACE="halt_on_error=1" go test -race -v -coverprofile=coverage.txt -covermode=atomic
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
